--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,11 +4,6 @@ server:
 spring:
   application:
     name: assignment
-  #  datasource:
-  #    url: jdbc:h2:file:./data/appserver
-  #    username: sa
-  ##    password:
-  #    driver-class-name: org.h2.Driver
   liquibase:
     enabled: true
     drop-first: true
@@ -22,3 +17,8 @@ spring:
     console:
       enabled: true
       path: /h2-console
+#  datasource:
+#    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+#    driver-class-name: org.h2.Driver
+#    username: sa
+#    password:
