--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,7 +12,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
-    show-sql: true
+    show-sql: false
   h2:
     console:
       enabled: true
@@ -24,6 +24,9 @@ spring:
 #    password:
 
 cinemetrics:
+  data:
+    csv:
+      academy-award-path: db/data/academy_awards.csv
   client:
     omdbapi:
       base-url: http://www.omdbapi.com
