--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,12 @@ server:
 spring:
   application:
     name: assignment
+  cache:
+    type: redis
+  data:
+    redis:
+      host: localhost
+      port: 6379
   liquibase:
     enabled: true
     drop-first: true
@@ -27,6 +33,8 @@ cinemetrics:
   data:
     csv:
       academy-award-path: db/data/academy_awards.csv
+  cache:
+    expiration-in-minutes: 60
   client:
     omdbapi:
       base-url: http://www.omdbapi.com
