--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,13 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <!--            <version>5.5.1</version>-->
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
