--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,7 @@
         </dependencies>
     </dependencyManagement>
     <build>
-        <finalName>cinemetrics-app</finalName>
+        <finalName>cinemetrics-api</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
