--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,7 +21,7 @@ spring:
     show-sql: false
   h2:
     console:
-      enabled: true
+      enabled: false
       path: /h2-console
   datasource:
     url: ${SPRING_DATASOURCE_URL}
