--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -21,7 +21,7 @@ spring:
     show-sql: false
   h2:
     console:
-      enabled: true
+      enabled: false
       path: /h2-console
   datasource:
     url: jdbc:mysql://localhost:3306/cinemetrics
