--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -37,6 +37,7 @@ jobs:
           tags: |
             type=sha
             type=ref,event=branch
+            type=raw,value=latest,enable={{is_default_branch}}
 
       - name: 🔐 Log in to Docker Hub
         uses: docker/login-action@v3
@@ -46,8 +47,12 @@ jobs:
 
       - name: 🏗️ Build Docker image
         run: |
-          docker build -t ${{ steps.meta.outputs.tags }} .
+          for tag in ${{ steps.meta.outputs.tags }}; do
+            docker build -t "$tag" .
+          done
 
       - name: 📤 Push Docker image
         run: |
-          docker push ${{ steps.meta.outputs.tags }}
+          for tag in ${{ steps.meta.outputs.tags }}; do
+            docker push "$tag"
+          done
