add RBAC for user API

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,11 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/cinemetrics
       - SPRING_DATASOURCE_USERNAME=root
       - SPRING_DATASOURCE_PASSWORD=${SPRING_DATASOURCE_PASSWORD}
-      - SPRING_REDIS_HOST=redis
       - JASYPT_ENCRYPTOR_PASSWORD=${JASYPT_ENCRYPTOR_PASSWORD}
+      - SPRING_REDIS_HOST=${SPRING_REDIS_HOST}
+      - SPRING_REDIS_PORT=${SPRING_REDIS_PORT}
+      - SPRING_REDIS_USERNAME=${SPRING_REDIS_USERNAME}
+      - SPRING_REDIS_PASSWORD=${SPRING_REDIS_PASSWORD}
     ports:
       - "8080:8080"
     networks:
