--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -49,3 +49,5 @@ cinemetrics:
     expiration-in-milliseconds: 600000
   env:
     jasypt-encryptor-password: ${JASYPT_ENCRYPTOR_PASSWORD}
+  security:
+    cors-allowed-urls: https://cinemetrics-api-d21f2e62e3ca.herokuapp.com/
