add host url to cors allowed list to test config

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -47,3 +47,5 @@ cinemetrics:
     expiration-in-milliseconds: 600000
   env:
     jasypt-encryptor-password: jasypt-itest
+  security:
+    cors-allowed-urls: https://cinemetrics-api.herokuapp.com/
