--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -48,5 +48,4 @@ cinemetrics:
   env:
     jasypt-encryptor-password: jasypt-itest
   security:
-    cors-allowed-urls:
-    - https://cinemetrics-api.herokuapp.com/
+    cors-allowed-origins: http://localhost:8080,http://localhost:3000,https://cinemetrics-api-d21f2e62e3ca.herokuapp.com
