--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,23 +13,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: ⬇️ Checkout code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: ☕ Set up JDK 21
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: 🧪 Run Tests and Build
+      - name: Run Checkstyle (Fail on violations)
+        run: mvn checkstyle:check
+
+      - name: Generate Checkstyle Report
+        run: mvn checkstyle:checkstyle
+
+      - name: Upload Checkstyle Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: checkstyle-report
+          path: target/checkstyle/*
+          retention-days: 15
+
+      - name: Run Tests and Build
         run: mvn verify
 
-      - name: 📦 Build JAR (skip tests)
+      - name: Build JAR (skip tests)
         run: mvn clean package -DskipTests
 
-      - name: 🐳 Set up Docker metadata
+      - name: Set up Docker metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
@@ -41,20 +54,20 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
 
-      - name: 🔐 Log in to Docker Hub
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-#      - name: 🔐 Log in to GitHub Container Registry
+#      - name: Log in to GitHub Container Registry
 #        uses: docker/login-action@v3
 #        with:
 #          registry: ghcr.io
 #          username: ${{ github.actor }}
 #          password: ${{ secrets.CR_PT }}
 
-      - name: 🏗️ Build and push
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -66,7 +79,7 @@ jobs:
         run: |
           curl https://cli-assets.heroku.com/install.sh | sh
 
-      - name: 🔧 Set up Heroku
+      - name: Set up Heroku
         uses: akhileshns/heroku-deploy@v3.14.15
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
